// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches NavLink tabs 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  color: #007bff;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #0056b3;
}

.c0:hover,
.c0:focus {
  border-color: #e9ecef #e9ecef #dee2e6;
}

<a
  className="c0"
/>
`;

exports[`Styles matches NavLink tabs active 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  color: #495057;
  border-color: #e9ecef #e9ecef #fff;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #495057;
}

<a
  className="c0"
/>
`;

exports[`Styles matches NavLink tabs disabled 1`] = `
.c0 {
  display: block;
  padding: 0.5rem;
  border: 1px solid transparent;
  color: #6c757d;
  border-color: transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: #6c757d;
}

<a
  className="c0"
  disabled={true}
/>
`;
